WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310133
[Site Isolation] xss-DENIED-window-open-parent.html is failing
https://bugs.webkit.org/show_bug.cgi?id=310133
Summary
[Site Isolation] xss-DENIED-window-open-parent.html is failing
rupin
Reported
2026-03-17 13:52:51 PDT
[Site Isolation] xss-DENIED-window-open-parent.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-17 13:52:57 PDT
<
rdar://problem/172772765
>
rupin
Comment 2
2026-03-17 14:13:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60808
EWS
Comment 3
2026-03-18 13:39:41 PDT
Committed
309499@main
(c81acd9e6c43): <
https://commits.webkit.org/309499@main
> Reviewed commits have been landed. Closing PR #60808 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug